--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.data.mongodb.uri=mongodb://localhost:27017/test
 spring.data.mongodb.database=test
 
 server.port=8888
+
+logging.level.root=debug
